[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "status-monitor"
version = "0.1.0"
description = "System status logger and dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "dash>=2.17",
  "pandas>=2.0",
  "plotly>=5.20",
  "psutil>=5.9",
]

[project.scripts]
status-log = "get_status:main"
status-dashboard = "use_status:main"

[tool.setuptools]
py-modules = ["get_status", "use_status"]
